--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .header{
 	font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 0.9375rem;
-	background: #000000;
+	background: #FFFFFF;
 	/* position: fixed;
 	width: 100%;
 	top: 0;
@@ -19,6 +19,7 @@
 	margin-top: 20px;
 	margin-bottom: 18px;
 }
+
 .header__list{
 	margin-top: 25px;
 	margin-bottom: 22px;
@@ -34,7 +35,7 @@
 	text-align: center;	
 	display: inline-block;
 	margin-left: 48px;
-	color: #FFFFFF;
+	color: rgb(0, 0, 0);
 }
 
 .header__item:first-child{
@@ -43,7 +44,7 @@
 
 .header__link{
 	text-decoration: none;
-	color: #FFFFFF;
+	color: #000000;
 	transition: all 0.3s;
 	display: inline-block;
 	border-bottom: 2px solid transparent;
@@ -54,7 +55,7 @@
 	transition-duration: 0.3s;
 	transition-timing-function: ease-in-out;
 	color: #EC7979;
-	border-bottom: 2px solid whitesmoke;
+	border-bottom: 2px solid #EC7979;
 }
 
 @media (max-width: 680px){
