--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,70 @@
-@import url('../css/awesome.css');
-@import url('../css/pricing.css');
-@import url('../css/customers.css');
-@import url('../css/axure.css');
-@import url('../css/header.css');
-@import url('../css/social.css');
-@import url('../css/footer.css');
-@import url('../css/contact.css');
-@import url('../css/axit.css');
-@import url('../css/tabs.css');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@100;200;300;400;500;600&display=swap');
+@import url("../css/awesome.css");
+@import url("../css/pricing.css");
+@import url("../css/customers.css");
+@import url("../css/axure.css");
+@import url("../css/header.css");
+@import url("../css/social.css");
+@import url("../css/footer.css");
+@import url("../css/contact.css");
+@import url("../css/about.css");
+@import url("../css/tabs.css");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@100;200;300;400;500;600&display=swap");
 
 * {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box;
-  list-style: none; }
+	padding: 0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
+	list-style: none;
+}
 
 .container {
-  max-width: 1170px;
-  margin: 0px auto;
-  padding: 0px 15px; 
-  position: relative;
-  z-index: 1;
+	max-width: 1170px;
+	margin: 0px auto;
+	padding: 0px 15px;
+	position: relative;
+	z-index: 1;
 }
 
 .title {
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 42px;
-  text-transform: uppercase;
-  text-align: center;
-  font-family: 'Raleway', 'sans-serif'; 
+	font-size: 36px;
+	font-weight: 400;
+	line-height: 42px;
+	text-transform: uppercase;
+	text-align: center;
+	font-family: "Raleway", "sans-serif";
 }
-  
+
 .title:after {
-  content: '';
-  width: 64px;
-  height: 2px;
-  display: block;
+	content: "";
+	width: 64px;
+	height: 2px;
+	display: block;
 }
 
 .subtitle {
-  font-weight: normal;
-  text-align: center;
-  font-style: normal;
-  line-height: 19px;
-  letter-spacing: 0;  
+	font-weight: normal;
+	text-align: center;
+	font-style: normal;
+	line-height: 19px;
+	letter-spacing: 0;
 }
 
-@media (max-width: 992px){
-	html{		
+@media (max-width: 992px) {
+	html {
 		font-size: 15px;
 	}
 }
 
-@media (max-width: 768px){
-	html{		
+@media (max-width: 768px) {
+	html {
 		font-size: 14px;
 	}
 }
 
-@media (max-width: 576px){
-	html{		
+@media (max-width: 576px) {
+	html {
 		font-size: 13px;
 	}
 }
-
