--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("../css/awesome.css");
+@import url("../css/description.css");
 @import url("../css/pricing.css");
 @import url("../css/customers.css");
 @import url("../css/axure.css");
