--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
 @import url("../css/customers.css");
 @import url("../css/axure.css");
 @import url("../css/header.css");
-@import url("../css/social.css");
+@import url("../css/skills.css");
 @import url("../css/footer.css");
 @import url("../css/contact.css");
 @import url("../css/about.css");
-@import url("../css/tabs.css");
+@import url("../css/education.css");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@100;200;300;400;500;600&display=swap");
 
