--- a/css/education.css
+++ b/css/education.css
@@ -1,10 +1,19 @@
 .education {
 	font-family: "Open Sans", "Verdana", "Geneva", "Tahoma", "sans-serif";
 	width: 100%;
-	font-size: 0.875rem;
 	padding-bottom: 2rem;
 	padding-top: 2rem;
 	background: #e5e5e5;
+}
+
+.education__title{	
+	margin: 0 auto 1rem auto;
+	font-size: 2rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 27px;
+	text-align: center;
+	text-transform: uppercase;
 }
 
 .education__wrapper {
@@ -42,16 +51,6 @@
 	max-width: 35.625rem;
 }
 
-.education__title {
-	margin-bottom: 3.625rem;
-	text-transform: uppercase;
-	font-size: 1.25rem;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 1.6875rem;
-	letter-spacing: 0em;
-	text-align: left;
-}
 
 .education__subtitle {
 	font-style: normal;
@@ -95,44 +94,4 @@
 .education__buildings {
 	width: 230px;
 }
-@media (max-width: 992px) {
-	.education {
-		padding-bottom: 4.25rem;
-		padding-top: 4.25rem;
-	}
-	.education__wrapper {
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-		flex-direction: column;
-	}
-	.education__buttons {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		margin-bottom: 20px;
-		width: 100%;
-	}
 
-	.education__link {
-		margin: 0 auto 20px auto;
-	}
-	.education__subtitle {
-		margin-bottom: 30px;
-		text-align: center;
-	}
-	.education__title {
-		text-align: center;
-		margin-bottom: 2.5rem;
-	}
-}
-
-@media (max-width: 576px) {
-	.education__link {
-		max-width: 100%;
-	}
-	.education {
-		padding-bottom: 3.15rem;
-		padding-top: 3.15rem;
-	}
-}
