--- a/css/education.css
+++ b/css/education.css
@@ -6,7 +6,7 @@
 	background: #e5e5e5;
 }
 
-.education__title{	
+.education__title {
 	margin: 0 auto 1rem auto;
 	font-size: 2rem;
 	font-style: normal;
@@ -19,79 +19,39 @@
 .education__wrapper {
 	display: flex;
 	justify-content: space-between;
-	flex-wrap: wrap;
+	align-items: flex-end;
+	margin-bottom: 1rem;
 }
 
-.education__buttons {
-	max-width: 23.125rem;
+.education__ul {
+	max-width: 585px;
 }
 
-.education__block {
-	background-color: #333;
-	color: #ffffff;
-	text-transform: uppercase;
-	font-size: 0.9375rem;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 1.25rem;
-	letter-spacing: 0em;
-	text-align: center;
-	padding: 2.8125rem 2.1875rem;
-	margin-top: 0.625rem;
-	border-radius: 4px;
-	transition-duration: 0.3s;
+.education__first {
+	border-bottom: 1px solid red;
+	max-width: max-content;
+	padding-bottom: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 
-.education__block:hover {
-	background-color: #ec7979;
-	transition-duration: 0.5s;
+.education__univer {
+	font-size: 1.5rem;
+	font-weight: 500;
 }
 
-.education__text {
-	max-width: 35.625rem;
+.education__year {
+	font-style: italic;
 }
 
-
-.education__subtitle {
-	font-style: normal;
-	font-weight: 400;
-	line-height: 1.1875rem;
-	letter-spacing: 0em;
-	text-align: left;
-	color: #86878b;
-	text-transform: uppercase;
-	margin-bottom: 5.1875rem;
-}
-
-.education__link {
-	margin: 0 auto 0 0;
-	text-align: center;
-	max-width: 135px;
-	cursor: pointer;
-	background: #ec7979;
-	transition-duration: 0.3s;
-}
-
-.education__link:hover {
-	transform: scale(1.15);
-	transition-duration: 0.5s;
-	box-shadow: 0 5px 28px rgba(0, 0, 0, 0.25);
-}
-
-.education__download {
-	text-decoration: none;
-	font-size: 0.9375rem;
-	font-style: normal;
-	font-weight: 600;
-	line-height: 40px;
-	letter-spacing: 0;
-	color: #ffffff;
+.education__img {
+	max-width: 300px;
 }
 
 .education__image {
-	max-width: 320px;
-}
-.education__buildings {
-	width: 230px;
+	max-width: 300px;
 }
 
+.education__language {
+	font-style: italic;
+	font-weight: 600;
+}
