fix: correction of code example

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("../css/description.css");
 @import url("../css/pricing.css");
 @import url("../css/customers.css");
-@import url("../css/axure.css");
+@import url("../css/code.css");
 @import url("../css/header.css");
 @import url("../css/skills.css");
 @import url("../css/footer.css");
