--- a/css/skills.css
+++ b/css/skills.css
@@ -16,6 +16,11 @@
 	text-transform: uppercase;
 }
 
+.skills__title::after {
+	background-color: #ff0000;
+	margin: 1rem auto;
+}
+
 .skills__wrapper{
 	display: flex;
 	justify-content: space-around;
