--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,26 @@
-.footer{
-	font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
-	font-size: 0.75rem;
+.footer {
+	font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
 	background: #000000;
+	padding-top: 2rem;
 }
 
-.footer__list{
+.footer__title {
+	margin: 0 auto 1rem auto;
+	font-size: 2rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 27px;
+	text-align: center;
+	text-transform: uppercase;
+	color: rgb(255, 255, 255);
+}
+
+.footer__title::after {
+	background-color: rgb(255, 255, 255);
+	margin: 1rem auto;
+}
+
+.footer__list {
 	padding-top: 30px;
 	padding-bottom: 18px;
 	display: flex;
@@ -13,81 +29,57 @@
 	flex-wrap: wrap;
 }
 
-.footer__icons{
+.footer__icons {
 	font-size: 1.4375rem;
 	margin-left: 30px;
 }
 
-.footer__icons:first-child{
+.footer__icons:first-child {
 	margin-left: 0px;
 }
 
-.footer__link{
+.footer__link {
 	display: inline-block;
 	color: rgb(153, 149, 149);
-	transition-duration: 0.2s;			
+	transition-duration: 0.2s;
 }
 
-.footer__link:hover{
+.footer__link:hover {
 	transition-duration: 0.4s;
 	transition-timing-function: ease;
-	transform: scale(1.4);		
+	transform: scale(1.4);
 }
 
-.footer__facebook:hover{
-	color:#4267B2;
+.footer__linkedin:hover {
+	color: #4267b2;
 	transition-duration: 0.1s;
 	transition-timing-function: ease;
 }
 
-.footer__twitter:hover{
-	color:#1DA1F2;
+.footer__github:hover {
+	color: #e60023;
 	transition-duration: 0.1s;
 	transition-timing-function: ease;
 }
 
-.footer__google:hover{
-	color:#FBBC05;
-	transition-duration: 0.1s;
-	transition-timing-function: ease;
+.footer__logo {
+	background-color: white;
+max-height: 1.5rem;
 }
 
-.footer__pinterest:hover{
-	color:#E60023;
-	transition-duration: 0.1s;
-	transition-timing-function: ease;
-}
-
-.footer__instagram:hover{
-	color: #8a3ab9;
-	transition-duration: 0.1s;
-	transition-timing-function: ease;
-}
-
-.footer__StumbleUpon:hover{
-	color: #f74425;
-	transition-duration: 0.1s;
-	transition-timing-function: ease;
-}
-
-.footer__wifi:hover{
-	color: aqua;
-	transition-duration: 0.1s;
-	transition-timing-function: ease;
-}
-
-.copyright{
+.copyright {
 	text-align: center;
 	font-style: normal;
 	font-weight: 400;
 	line-height: 16px;
-	color: #FFFFFF;
+	color: #ffffff;
 	padding-bottom: 16px;
+	font-size: 12px;
 }
 
-@media (max-width: 370px){
-	.footer__icons{
+@media (max-width: 370px) {
+	.footer__icons {
 		font-size: 1.25rem;
 		margin-left: 25px;
 	}
-} 
+}
