--- a/css/education.css
+++ b/css/education.css
@@ -60,3 +60,19 @@
 	font-style: italic;
 	font-weight: 600;
 }
+
+@media (max-width: 768px) {
+	.education__wrapper {
+		flex-wrap: wrap;
+		flex-direction: column-reverse;
+	}
+
+	.education__img {
+		margin: 0 auto;
+	}
+
+	.education__ul {
+		text-align: left;
+		margin: 10px auto 0 auto;
+	}
+}
