--- a/css/skills.css
+++ b/css/skills.css
@@ -1,4 +1,4 @@
-.skills{
+.skills {
 	font-family: 'Open Sans', 'Verdana', 'Geneva', 'Tahoma', 'sans-serif';
 	font-size: 0.875rem;
 	background: #ffeded;
@@ -6,7 +6,7 @@
 	padding-bottom: 2rem;
 }
 
-.skills__title{	
+.skills__title {
 	margin: 0 auto 1rem auto;
 	font-size: 2rem;
 	font-style: normal;
@@ -21,24 +21,36 @@
 	margin: 1rem auto;
 }
 
-.skills__wrapper{
+.skills__wrapper {
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
 	width: 100%;
 }
 
-.skills__list{
+.skills__list {
 	font-size: 1.25rem;
 	color: rgb(107, 103, 103);
 }
 
-.skills__item{
+.skills__item {
 	margin-bottom: 0.5rem;
+	display: flex;
+	align-items: center;
+	gap: 3px;
 }
 
-@media (max-width: 1025px){
-	.skills__list{
+.skill__icon {
+	width: 20px;
+	height: 20px;
+}
+
+.websocket path {
+	fill: rgb(107, 103, 103);
+}
+
+@media (max-width: 1025px) {
+	.skills__list {
 		width: 100%;
 	}
 }
