--- a/css/education.css
+++ b/css/education.css
@@ -24,7 +24,7 @@
 .education__wrapper {
 	display: flex;
 	justify-content: space-between;
-	align-items: flex-end;
+	align-items: center;
 	margin-bottom: 3rem;
 }
 
@@ -33,14 +33,18 @@
 }
 
 .education__first {
-	border-bottom: 1px solid red;
 	max-width: max-content;
-	padding-bottom: 0.5rem;
+	padding-bottom: 1.5rem;
 	margin-bottom: 0.5rem;
 }
 
+.education__first:last-of-type {
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+
 .education__univer {
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 	font-weight: 500;
 }
 
